Fixed basket for the countless time (height for overflow scrolling)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -177,7 +177,7 @@ div.wrapper{
     background: #0d255a;
 }
 .basketDiv {
-  /*height: 400px;*/
+  height: 400px;
   display: inline-block;
   overflow: scroll;
   /*border: 4px solid red;*/
